Bug 250981 - Nullptr crash under CustomPropertyRegistry::registerFromStylesheet
Summary: Nullptr crash under CustomPropertyRegistry::registerFromStylesheet
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Antti Koivisto
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-01-22 08:25 PST by Antti Koivisto
Modified: 2023-01-22 09:31 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antti Koivisto 2023-01-22 08:25:48 PST
<style>
  @property --a {
    syntax: 'foo';
    inherits: false;
    initial-value: foo;
  }
</style>
<script>
  onload = () => {
    document.open();
    document.createElement('div').style.width = '0';
  };
</script>
Comment 1 Antti Koivisto 2023-01-22 08:26:18 PST
rdar://104474736
Comment 2 Antti Koivisto 2023-01-22 08:39:09 PST
Pull request: https://github.com/WebKit/WebKit/pull/8954
Comment 3 EWS 2023-01-22 09:31:19 PST
Committed 259188@main (9b2b18b81262): <https://commits.webkit.org/259188@main>

Reviewed commits have been landed. Closing PR #8954 and removing active labels.