Nullptr crash under CustomPropertyRegistry::registerFromStylesheet https://bugs.webkit.org/show_bug.cgi?id=250981 rdar://104474736

Reviewed by Alan Baradlay.

* LayoutTests/fast/css/at-property-registration-crash-expected.txt: Added.
* LayoutTests/fast/css/at-property-registration-crash.html: Added.
* Source/WebCore/style/CustomPropertyRegistry.cpp:
(WebCore::Style::CustomPropertyRegistry::registerFromStylesheet):

Use the default style instead of getting the root style from the style resolver.
It might not exist yet and is not needed to resolve computationally independent values.

Canonical link: https://commits.webkit.org/259188@main